japari/game-stateful-set.yaml
kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: game

spec:
  serviceName: game
  podManagementPolicy: Parallel
  replicas: 1
  selector:
    matchLabels:
      app: game
  template:
    metadata:
      labels:
        app: game
    spec:
      enableServiceLinks: false
      imagePullSecrets:
        - name: japari-image-pull-secret
      containers:
        - name: game
          image: ghcr.io/japariproject/game:master
          ports:
            - containerPort: 3000
              name: http
