japari/front-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: front

spec:
  type: ClusterIP
  ports:
    - targetPort: http
      name: http
      port: 80
  selector:
    app: front
