japari/game-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: game
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "3000"

spec:
  type: ClusterIP
  ports:
    - port: 3000
      name: http
      targetPort: http
  selector:
    app: game
